force-app/main/default/objects/Debug_Log__c/Debug_Log__c.object-meta.xml
<CustomObject>
    <description>Used for storing erros that are thrown in code.</description>
    <label>Debug Log</label>
    <nameField>
        <displayFormat>DL{00000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Debug Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>