force-app/main/default/objects/Debug_Log__c/fields/Additional_Information__c.field-meta.xml
<CustomField>
    <fullName>Additional_Information__c</fullName>
    <description>Any additional information that could be useful</description>
    <label>Additional Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>