force-app/main/default/objects/Debug_Log__c/fields/Cause__c.field-meta.xml
<CustomField>
    <fullName>Cause__c</fullName>
    <description>Describes the cause of the error</description>
    <label>Cause</label>
    <length>100</length>
    <type>Text</type>
</CustomField>