force-app/main/default/objects/Debug_Log__c/fields/Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Class_Name__c</fullName>
    <description>Name of the class the error was created from</description>
    <label>Class Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>